# difference

./: .gitignore  .travis.yml  LICENSE  NE.hs  README.md  bench.hs  difference.cabal  runbench
src/Data/Monoid/: Difference.hs
src/Data/Semigroup/: Difference.hs
