name:                   difference
version:                0.1
cabal-version:          >=1.8
homepage:               https://github.com/arkeet/difference
bug-reports:            https://github.com/arkeet/difference/issues
license:                BSD3
license-file:           LICENSE
author:                 Adrian Keet
maintainer:             Adrian Keet <arkeet@gmail.com>
copyright:              (C) 2013 Adrian Keet
category:               Data
build-type:             Simple
tested-with:            GHC == 7.6.3
synopsis:               Difference semigroups and monoids
description:
    This package provides semigroup and monoid analogues of difference lists,
    reassociating the binary operation to the right.

library
    hs-source-dirs:     src
    exposed-modules:    Data.Semigroup.Difference,
                        Data.Monoid.Difference
    build-depends:      base >= 4,
                        semigroups >= 0.3,
                        semigroupoids
