name:                   difference
version:                0.1
cabal-version:          >=1.8
homepage:               https://github.com/arkeet/difference
bug-reports:            https://github.com/arkeet/difference/issues
license:                BSD3
license-file:           LICENSE
author:                 Adrian Keet
maintainer:             Adrian Keet <arkeet@gmail.com>
copyright:              (C) 2013-2015 Adrian Keet
category:               Data
build-type:             Simple
synopsis:               Difference semigroups and monoids
description:
    This package provides semigroup and monoid analogues of difference lists,
    reassociating the binary operation to the right.

source-repository head
    type: git
    location: git://github.com/arkeet/difference.git

library
    hs-source-dirs:     src
    exposed-modules:    Data.Semigroup.Difference
                        Data.Monoid.Difference
    ghc-options:        -Wall
    build-depends:      base >= 4 && < 5,
                        semigroups >= 0.3,
                        semigroupoids
